Fix text overflow

--- a/client/src/sass/class-helpers/_layout.scss
+++ b/client/src/sass/class-helpers/_layout.scss
@@ -44,3 +44,8 @@
     }
   }
 }
+
+// See https://css-tricks.com/flexbox-truncated-text/
+.min-width-0 {
+  min-width: 0;
+}
